# packet-watcher

./: Cargo.toml  NOTES.md  README.md
packet-watcher/: Cargo.toml  build.rs
packet-watcher-common/: Cargo.toml
packet-watcher-common/src/: lib.rs
packet-watcher-ebpf/: Cargo.toml  rust-toolchain.toml
packet-watcher-ebpf/.helix/: languages.toml
packet-watcher-ebpf/src/: egress.rs  ingress.rs  lib.rs  main.rs
packet-watcher/src/: main.rs  tui.rs
