[workspace]
resolver = "2"
members = ["packet-watcher", "packet-watcher-common", "packet-watcher-ebpf"]
default-members = ["packet-watcher", "packet-watcher-common"]

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
bytes = "1.8.0"
cargo_metadata = { version = "0.18.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
network-types = "0.0.7"
pnet_datalink = { version = "0.35.0", package = "pnet_datalink" }
simplelog = "0.12"
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release.package.packet-watcher-ebpf]
debug = 2
codegen-units = 1
